--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@salma-ali/cli-number-guessing",
+  "name": "@salma-ali/cli-number-guessing"
   "version": "2.0.1",
   "description": "this is cli based numbers guessing game",
   "main": "index.js",
